# bashish

./: .gitignore  BUGS  COPYING  CREDITS  ChangeLog  HACKING  INSTALL  Makefile.in.mk  PROMPT_TIPS  README  TESTCASES  THEME  TODO  UNINSTALL  WHAXIN  _repackthemes.sh  autogen.sh  bashish.spec.in  config.guess  config.sub  configure.ac  genheader  mkdeb  mkdist  mkpdf  mkrelease  mkrpm  mkslack  mmmkayfile  slack-desc
data/: bashish-version.in
data/bt/defaults/: prompt.bash  prompt.fish  prompt.sh  theme
data/bt/overrides/: prompt.fish  prompt.rc  prompt.sh  theme
data/defaults/: prompt.csh  prompt.rc  prompt.sh  theme
data/lib/: _bashish_bashish_fork  _bashish_bashish_fork.in  _bashish_bashish_subproc  _bashish_bashish_subproc.in  _bashish_bashishtheme_launcher  _bashish_fork  _bashish_fork.in  _bashish_isxterm  _bashish_launcher  _bashish_launcher.in  _bashish_prompt_asciilogo  _bashish_prompt_cbmerror  _bashish_prompt_color  _bashish_prompt_cp437  _bashish_prompt_cwd  _bashish_prompt_cwd.in  _bashish_prompt_dirsize  _bashish_prompt_fillx  _bashish_prompt_fillx.in  _bashish_prompt_isxterm  _bashish_prompt_parsecolors  _bashish_prompt_rcs  _bashish_prompt_shellvars  _bashish_prompt_testloc  _bashish_prompt_testloc.in  _bashish_subproc  _bashish_subproc.in  _bashish_termdetect  _bashish_utfcheck  git-completion.bash
data/main/bashish/: init
data/main/bashish/sys/: appdb  autohandler  configurehandler  createdirs  firstrunhandler  gnometerminalhandler  list  save  setvars  termcleanup  termhandler  termloader  uninstall  unpack  update
data/main/bashishtheme/: init
data/main/bashishtheme/sys/: appdb  find  list  save  setopts  termcleanup  themedb  unpack  update
data/main/prompt/csh/: _bashish_module  autoload  bashishtheme  init
data/main/prompt/dos/: autoload  init
data/main/prompt/fish/: autoload  init
data/main/prompt/osh/: autoload
data/main/prompt/rc/: autoload  init
data/main/prompt/sh/: autoload  autoload.in  init
data/main/terminal/: init
data/main/terminal/engine/: _bashish_cmdtool_printtitle  _bashish_dtterm_icon  _bashish_dtterm_init  _bashish_eterm_ansi  _bashish_eterm_color  _bashish_eterm_image  _bashish_generic_bulkprint  _bashish_generic_cleanvar  _bashish_generic_logo  _bashish_generic_winch  _bashish_gnome-terminal_properties  _bashish_gnome-terminal_winch  _bashish_iterm_color  _bashish_konsole_init  _bashish_konsole_properties  _bashish_linux_ansi  _bashish_linux_color  _bashish_linux_font  _bashish_rxvt_color  _bashish_rxvt_image  _bashish_terminalapp_color  _bashish_urxvt_font  _bashish_vt100_posthide  _bashish_vt100_prehide  _bashish_vt100_reverse  _bashish_vt100_sane  _bashish_xterm_256  _bashish_xterm_ansi  _bashish_xterm_color  _bashish_xterm_font  _bashish_xterm_geometry  _bashish_xterm_printtitle  _bashish_xterm_winch  _bashish_xwsh_color
data/main/terminal/sys/: about  autooff  autoon  btapp  consolerestore  createdirs  firstrun  loadengine  loadtheme  locale  termdetect  version
data/overrides/: prompt.sh
data/themes/app/: browser.bt  chat.bt  compress.bt  editor.bt  editor_reversed.bt  editornofont.bt  evilroot.bt  generic.bt  hearttracker.bt  invertfgbg.bt  javac.bt  latex.bt  manual.bt  mixer.bt  video.bt
data/themes/app/appchat/: theme
data/themes/app/appcompress/: theme
data/themes/app/appeditor/: theme
data/themes/app/appeditor_reversed/: theme
data/themes/ascii-art/: bluesteel.bt  box.bt  conda.bt  ean.bt  fade.bt  fire.bt  flowerpower.bt  m0an.bt  moo.bt  poker.bt  tinycolor.bt  urbandawn.bt
data/themes/computer/: amiga.bt  c64.bt  dos.bt  lcars.bt  multics.bt  mvs.bt  mvsmono.bt  ubuntu.bt
deb-stuff/: README  changelog  changelog.in  control  copyright  rules
deb-stuff/source/: lintian-overrides
doc/: howto.html
man/: bashish.1.in  bashishtheme.1.in
(+206 files in other folders)
